traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
override def run() {def test_fin():Boolean {var test:Boolean=false; if (getDirection()==Direction.EAST) {left();
                                                                    ^Snake:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
                                                                                                           test=(!isFacingWall); right()}; if (getDirection()==Direction.WEST) {right(); test=(!isFacingWall); left()}; return(test)}
                                                                                                                                           ^Snake:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
                                                                                                           test=(!isFacingWall); right()}; if (getDirection()==Direction.WEST) {right(); test=(!isFacingWall); left()}; return(test)}
                                                                                                                                                                                                                        ^